--- a/app/src/main/res/layout/backup_key_password_fragment.xml
+++ b/app/src/main/res/layout/backup_key_password_fragment.xml
@@ -1,45 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:orientation="vertical"
-        app:cardElevation="5dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
+        <include
+            android:id="@+id/action_bar"
+            layout="@layout/actionbar_custom" />
+
+        <LinearLayout
+            android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="10dp">
 
-            <TextView
-                android:id="@+id/tv_title"
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/OutlinedRoundedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:text="ตั้งรหัสผ่าน"
-                android:textColor="@color/black" />
+                android:layout_marginBottom="10dp"
+                android:textColorHint="@color/grey"
+                app:boxCornerRadiusBottomEnd="10dp"
+                app:boxCornerRadiusBottomStart="10dp"
+                app:boxCornerRadiusTopEnd="10dp"
+                app:boxCornerRadiusTopStart="10dp"
+                app:boxStrokeColor="@color/blue"
+                app:expandedHintEnabled="false"
+                app:hintTextColor="@color/blue"
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/grey">
 
-            <EditText
-                android:id="@+id/edt_password"
-                android:layout_width="match_parent"
-                android:inputType="textPassword"
-                android:layout_height="wrap_content"
-                android:hint="Password Backup"
-                android:padding="10dp" />
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edt_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
 
-            <Button
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <!--  <EditText
+                  android:id="@+id/edt_password"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:hint="Password Backup"
+                  android:inputType="textPassword"
+                  android:padding="10dp" />-->
+
+            <!--   <Button
+                   android:id="@+id/btn_backup"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_gravity="right"
+                   android:text="Backup" />-->
+
+
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_backup"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:text="Backup" />
-
+                android:layout_marginTop="10dp"
+                android:padding="10dp"
+                android:text="BACKUP"
+                android:textColor="@color/white"
+                android:textSize="22sp"
+                app:cornerRadius="15dp" />
 
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
 </layout>
