--- a/app/src/main/res/layout/cert_list_fragment.xml
+++ b/app/src/main/res/layout/cert_list_fragment.xml
@@ -9,7 +9,11 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:orientation="vertical">
+
+        <include layout="@layout/actionbar_custom" android:id="@+id/action_bar"/>
+
 
 
         <androidx.recyclerview.widget.RecyclerView
