--- a/app/src/main/res/layout/import_key_password_fragment.xml
+++ b/app/src/main/res/layout/import_key_password_fragment.xml
@@ -16,70 +16,113 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
 
-        <FrameLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
+            <include
+                android:id="@+id/action_bar"
+                layout="@layout/actionbar_custom"/>
+
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                app:cardElevation="5dp">
+                android:orientation="vertical"
+                android:padding="10dp">
 
 
-                <LinearLayout
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/OutlinedRoundedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="10dp">
+                    android:layout_marginBottom="10dp"
+                    android:textColorHint="@color/grey"
+                    app:boxCornerRadiusBottomEnd="10dp"
+                    app:boxCornerRadiusBottomStart="10dp"
+                    app:boxCornerRadiusTopEnd="10dp"
+                    app:boxCornerRadiusTopStart="10dp"
+                    app:boxStrokeColor="@color/blue"
+                    app:expandedHintEnabled="false"
+                    app:hintTextColor="@color/blue"
+                    app:passwordToggleEnabled="true"
+                    app:passwordToggleTint="@color/grey">
 
-
-                    <TextView
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edt_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="10dp"
-                        android:text="Import p12 password"
-                        android:textSize="20sp"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-
-                    <EditText
-                        android:id="@+id/password_text"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
                         android:hint="Password"
                         android:inputType="textPassword"
-                        android:textSize="35sp"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        android:textColor="@color/black"
+                        android:textSize="20sp" />
 
-                    <EditText
-                        android:id="@+id/name_cert"
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/OutlinedRoundedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:textColorHint="@color/grey"
+                    app:boxCornerRadiusBottomEnd="10dp"
+                    app:boxCornerRadiusBottomStart="10dp"
+                    app:boxCornerRadiusTopEnd="10dp"
+                    app:boxCornerRadiusTopStart="10dp"
+                    app:boxStrokeColor="@color/blue"
+                    app:expandedHintEnabled="false"
+                    app:hintTextColor="@color/blue">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edt_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:gravity="center"
                         android:hint="Name"
-                        android:textSize="35sp"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        android:textColor="@color/black"
+                        android:textSize="20sp" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+                <!--  <EditText
+                      android:id="@+id/password_text"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:gravity="center"
+                      android:hint="Password"
+                      android:inputType="textPassword"
+                      android:textSize="35sp"
+                      app:layout_constraintTop_toTopOf="parent" />
+
+                  <EditText
+                      android:id="@+id/name_cert"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:layout_marginTop="10dp"
+                      android:gravity="center"
+                      android:hint="Name"
+                      android:textSize="35sp"
+                      app:layout_constraintTop_toTopOf="parent" />-->
 
 
-                    <Button
-                        android:id="@+id/extract_ca_btn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="end"
-                        android:layout_marginEnd="20dp"
-                        android:text="+Import" />
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/extract_ca_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:layout_marginTop="10dp"
+                    android:text="IMPORT"
+                    android:textColor="@color/white"
+                    android:textSize="22sp"
+                    app:cornerRadius="15dp" />
 
-                </LinearLayout>
 
-            </androidx.cardview.widget.CardView>
-        </FrameLayout>
+            </LinearLayout>
+        </LinearLayout>
 
         <ProgressBar
             android:id="@+id/progressBar2"
