--- a/app/src/main/res/layout/list_item_cert.xml
+++ b/app/src/main/res/layout/list_item_cert.xml
@@ -19,9 +19,9 @@
 
     <data>
 
-<!--        <variable-->
-<!--            name="clickListener"-->
-<!--            type="android.view.View.OnClickListener" />-->
+        <!--        <variable-->
+        <!--            name="clickListener"-->
+        <!--            type="android.view.View.OnClickListener" />-->
 
         <variable
             name="cert"
@@ -30,25 +30,49 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
 
-        <androidx.cardview.widget.CardView
+        android:padding="10dp">
+
+        <TextView
+            android:id="@+id/cert_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:id="@+id/cardView"
-            app:cardBackgroundColor="@color/white"
-            app:cardElevation="5dp">
+            android:text="@{cert.certName}"
+            android:textAppearance="?attr/textAppearanceListItem"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            tools:text="Cert" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/cert_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="5"
+                android:text="Last update:"
+                android:textColor="@color/grey"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/cert_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:text="@{cert.certName}"
-                android:textAppearance="?attr/textAppearanceListItem"
-                android:textColor="@color/black"
-                tools:text="Cert" />
-        </androidx.cardview.widget.CardView>
+                android:text="12/12/2021"
+                android:textColor="@color/grey"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_marginTop="15dp"
+            android:layout_height="1dp"
+            android:background="@color/grey" />
     </LinearLayout>
 </layout>
