--- a/app/src/main/res/layout/restore_key_fragment.xml
+++ b/app/src/main/res/layout/restore_key_fragment.xml
@@ -15,6 +15,7 @@
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
+        android:background="@color/white"
         android:layout_height="match_parent">
 
         <LinearLayout
@@ -22,21 +23,22 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <include layout="@layout/actionbar_custom" android:id="@+id/action_bar"/>
 
             <TextView
                 android:id="@+id/tv_email"
                 android:layout_width="wrap_content"
-                android:layout_gravity="center"
                 android:padding="10dp"
+                android:textColor="@color/blue"
+                android:textStyle="bold"
+                android:textSize="20sp"
                 android:layout_height="wrap_content" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                app:spanCount="2"
-                tools:context="com.google.samples.apps.sunflower.GardenActivity"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/list_item_cert" />
         </LinearLayout>
 
