--- a/app/src/main/res/layout/sign_fragment.xml
+++ b/app/src/main/res/layout/sign_fragment.xml
@@ -15,6 +15,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         tools:context=".ui.sign.SignFragment">
 
         <LinearLayout
@@ -22,7 +23,7 @@
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:padding="20dp">
+           >
             <!--                <EditText-->
             <!--                    android:id="@+id/editText"-->
             <!--                    android:layout_width="wrap_content"-->
@@ -137,9 +138,14 @@
                     android:textColor="@color/white" />
             </LinearLayout>
 
+
+            <include layout="@layout/actionbar_custom" android:id="@+id/action_bar"/>
+
+
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="350dp"
+                android:layout_height="match_parent"
+
                 android:id="@+id/previewView"
                 />
 
