--- a/app/src/main/res/layout/actionbar_custom.xml
+++ b/app/src/main/res/layout/actionbar_custom.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/blue"
-        android:padding="20dp">
+        android:padding="30dp">
 
 
         <ImageView
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textColor="@color/white"
-            android:textSize="22sp" />
+            android:textSize="@dimen/text_normal" />
     </LinearLayout>
 
 </layout>
