--- a/app/src/main/res/layout/backup_key_password_fragment.xml
+++ b/app/src/main/res/layout/backup_key_password_fragment.xml
@@ -13,9 +13,9 @@
             layout="@layout/actionbar_custom" />
 
         <LinearLayout
-            android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/white"
             android:orientation="vertical"
             android:padding="10dp">
 
@@ -25,10 +25,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:textColorHint="@color/grey"
-                app:boxCornerRadiusBottomEnd="10dp"
-                app:boxCornerRadiusBottomStart="10dp"
-                app:boxCornerRadiusTopEnd="10dp"
-                app:boxCornerRadiusTopStart="10dp"
+                app:boxCornerRadiusBottomEnd="20dp"
+                app:boxCornerRadiusBottomStart="20dp"
+                app:boxCornerRadiusTopEnd="20dp"
+                app:boxCornerRadiusTopStart="20dp"
                 app:boxStrokeColor="@color/blue"
                 app:expandedHintEnabled="false"
                 app:hintTextColor="@color/blue"
@@ -42,7 +42,7 @@
                     android:hint="Password"
                     android:inputType="textPassword"
                     android:textColor="@color/black"
-                    android:textSize="20sp" />
+                    android:textSize="@dimen/text_normal_small" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -67,11 +67,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:padding="10dp"
+                android:padding="20dp"
                 android:text="BACKUP"
                 android:textColor="@color/white"
-                android:textSize="22sp"
-                app:cornerRadius="15dp" />
+                android:textSize="@dimen/text_small"
+                app:cornerRadius="30sp" />
 
         </LinearLayout>
     </LinearLayout>
