--- a/app/src/main/res/layout/dialog_import_success.xml
+++ b/app/src/main/res/layout/dialog_import_success.xml
@@ -21,7 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="10dp">
+                android:padding="20dp">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -35,11 +35,11 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:padding="10dp"
+                    android:padding="20dp"
                     android:text="Import Successful"
                     android:textAppearance="?android:textAppearanceMedium"
                     android:textColor="@color/black"
-                    android:textSize="24sp"
+                    android:textSize="@dimen/text_normal"
                     android:textStyle="" />
 
 
@@ -56,10 +56,10 @@
                         android:id="@+id/btn_positive"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="10dp"
+                        android:padding="20dp"
                         android:text="CLOSE"
-                        android:textSize="20sp"
-                        app:cornerRadius="10dp" />
+                        android:textSize="@dimen/text_small"
+                        app:cornerRadius="30dp" />
 
 
                 </LinearLayout>
