--- a/app/src/main/res/layout/dialog_sign_info.xml
+++ b/app/src/main/res/layout/dialog_sign_info.xml
@@ -16,7 +16,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="10dp">
+                android:padding="20dp">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -27,7 +27,7 @@
                     android:text="Sign Info"
                     android:textAppearance="?android:textAppearanceMedium"
                     android:textColor="@color/black"
-                    android:textSize="22sp"
+                    android:textSize="@dimen/text_normal"
                     android:textStyle="bold" />
 
                 <TextView
@@ -40,7 +40,7 @@
                     android:text="Do you want to backup p12?"
                     android:textAppearance="?android:textAppearanceMedium"
                     android:textColor="@color/black"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/text_normal_small"
                     android:textStyle="" />
 
 
@@ -57,23 +57,23 @@
                         android:id="@+id/btn_positive"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="10dp"
+                        android:padding="20dp"
                         android:text="CONFIRM"
-                        android:textSize="20sp"
-                        app:cornerRadius="10dp" />
+                        android:textSize="@dimen/text_small"
+                        app:cornerRadius="30dp" />
 
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/btn_negative"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="10dp"
+                        android:padding="20dp"
                         android:text="CANCEL"
                         android:textColor="@color/blue"
                         app:strokeColor="@color/blue"
                         app:backgroundTint="@color/white"
-                        android:textSize="20sp"
+                        android:textSize="@dimen/text_small"
                         app:strokeWidth="1dp"
-                        app:cornerRadius="10dp" />
+                        app:cornerRadius="30dp" />
 
 
                 </LinearLayout>
