--- a/app/src/main/res/layout/dialog_sign_info_success.xml
+++ b/app/src/main/res/layout/dialog_sign_info_success.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="20dp">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -32,7 +32,7 @@
                 android:layout_marginTop="10dp"
                 android:textAppearance="?android:textAppearanceMedium"
                 android:textColor="@color/black"
-                android:textSize="22sp"
+                android:textSize="@dimen/text_xlarge"
                 android:textStyle="bold" />
 
             <TextView
@@ -43,7 +43,7 @@
                 android:text="เรียบร้อย"
                 android:textAppearance="?android:textAppearanceMedium"
                 android:textColor="@color/black"
-                android:textSize="18sp" />
+                android:textSize="@dimen/text_normal_small" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -54,7 +54,7 @@
                 android:text="วันที่"
                 android:textAppearance="?android:textAppearanceMedium"
                 android:textColor="@color/grey"
-                android:textSize="18sp" />
+                android:textSize="@dimen/text_small" />
 
             <TextView
                 android:id="@+id/tv_date"
@@ -65,7 +65,7 @@
                 android:text="วันที่"
                 android:textAppearance="?android:textAppearanceMedium"
                 android:textColor="@color/black"
-                android:textSize="18sp"
+                android:textSize="@dimen/text_small"
                 android:textStyle="bold" />
 
 
@@ -83,21 +83,21 @@
                     android:id="@+id/btn_positive"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
+                    android:padding="20dp"
                     android:text="รับทราบ"
-                    android:textSize="20sp"
-                    app:cornerRadius="10dp" />
+                    android:textSize="@dimen/text_small"
+                    app:cornerRadius="30dp" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btn_negative"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
+                    android:padding="20dp"
                     android:text="ปิดแจ้งเตือน"
                     android:textColor="@color/blue"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/text_small"
                     app:backgroundTint="@color/white"
-                    app:cornerRadius="10dp"
+                    app:cornerRadius="30dp"
                     app:strokeColor="@color/blue"
                     app:strokeWidth="1dp" />
 
