--- a/app/src/main/res/layout/import_key_fragment.xml
+++ b/app/src/main/res/layout/import_key_fragment.xml
@@ -15,23 +15,24 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
+
             android:orientation="vertical">
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/blue"
-                android:padding="20dp"
+                android:padding="30dp"
                 android:src="@drawable/logo3" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Key Create"
                 android:padding="10dp"
+                android:text="Key Create"
                 android:textColor="@color/blue"
-                android:textStyle="bold"
-                android:textSize="22sp" />
+                android:textSize="@dimen/text_normal"
+                android:textStyle="bold" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
@@ -45,60 +46,59 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/transparent"
                 android:visibility="visible">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
+                    android:background="@color/transparent"
                     android:orientation="vertical">
 
-                    <androidx.cardview.widget.CardView
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="3dp"
+                        android:background="@drawable/shadow_top" />
+
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:cardBackgroundColor="@color/white"
-                        app:cardCornerRadius="10dp"
-                        app:cardUseCompatPadding="true"
-                        app:cardElevation="5dp">
+                        android:background="@drawable/bg_menu"
+                        android:gravity="bottom"
+                        android:orientation="horizontal"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp">
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
+
+                        <ImageView
+                            android:id="@+id/btn_import_menu"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:gravity="bottom"
-                            android:orientation="horizontal"
-                            android:paddingBottom="10dp"
-                            android:paddingTop="10dp">
+                            android:layout_weight="1"
+                            android:src="@drawable/import_icon" />
 
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="1dp"
+                            android:layout_weight="1" />
 
-                            <ImageView
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:id="@+id/btn_import_menu"
-                                android:src="@drawable/import_icon" />
+                        <ImageView
+                            android:id="@+id/btn_restore_menu"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:src="@drawable/restore" />
+                    </LinearLayout>
 
-                            <View
-                                android:layout_width="0dp"
-                                android:layout_height="1dp"
-                                android:layout_weight="1" />
-
-                            <ImageView
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:id="@+id/btn_restore_menu"
-                                android:layout_weight="1"
-                                android:src="@drawable/restore" />
-                        </LinearLayout>
-
-                    </androidx.cardview.widget.CardView>
                 </LinearLayout>
 
                 <ImageView
+                    android:id="@+id/btn_sign"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:id="@+id/btn_sign"
-                    android:paddingBottom="20dp"
+                    android:paddingBottom="10dp"
                     android:src="@drawable/sign_icon" />
             </FrameLayout>
         </LinearLayout>
@@ -120,6 +120,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:orientation="vertical"
                 android:padding="10dp">
 
@@ -131,13 +132,13 @@
                     android:text="@string/ui_import_first"
                     android:textAppearance="?android:textAppearanceMedium"
                     android:textColor="@color/black"
-                    android:textSize="30sp" />
+                    android:textSize="@dimen/text_xlarge" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="20dp"
                     android:layout_marginEnd="20dp"
                     android:orientation="vertical">
 
@@ -148,7 +149,7 @@
                         android:background="@drawable/btn_import"
                         android:gravity="center"
                         android:orientation="horizontal"
-                        android:padding="10dp">
+                        android:padding="20dp">
 
                         <ImageView
                             android:layout_width="wrap_content"
@@ -160,10 +161,10 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_marginLeft="10dp"
-                            android:ems="5"
-                            android:text="@string/ui_import_btn_import"
+                            android:ems="6"
+                            android:text="IMPORT KEY"
                             android:textColor="@color/white"
-                            android:textSize="26sp" />
+                            android:textSize="@dimen/text_small" />
 
                     </LinearLayout>
 
@@ -171,11 +172,11 @@
                         android:id="@+id/btn_restore_key"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="20dp"
                         android:background="@drawable/btn_restore"
                         android:gravity="center"
                         android:orientation="horizontal"
-                        android:padding="10dp">
+                        android:padding="20dp">
 
                         <ImageView
                             android:layout_width="wrap_content"
@@ -187,10 +188,10 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_marginLeft="10dp"
-                            android:ems="5"
-                            android:text="@string/ui_import_btn_restore"
+                            android:ems="6"
+                            android:text="RESTORE KEY"
                             android:textColor="@color/blue"
-                            android:textSize="26sp" />
+                            android:textSize="@dimen/text_small" />
 
                     </LinearLayout>
 
