--- a/app/src/main/res/layout/import_key_password_fragment.xml
+++ b/app/src/main/res/layout/import_key_password_fragment.xml
@@ -27,7 +27,7 @@
 
             <include
                 android:id="@+id/action_bar"
-                layout="@layout/actionbar_custom"/>
+                layout="@layout/actionbar_custom" />
 
 
             <LinearLayout
@@ -41,13 +41,42 @@
                     style="@style/OutlinedRoundedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
                     android:textColorHint="@color/grey"
-                    app:boxCornerRadiusBottomEnd="10dp"
-                    app:boxCornerRadiusBottomStart="10dp"
-                    app:boxCornerRadiusTopEnd="10dp"
-                    app:boxCornerRadiusTopStart="10dp"
+                    app:boxCornerRadiusBottomEnd="20dp"
+                    app:boxCornerRadiusBottomStart="20dp"
+                    app:boxCornerRadiusTopEnd="20dp"
+                    app:boxCornerRadiusTopStart="20dp"
                     app:boxStrokeColor="@color/blue"
+                    app:errorTextAppearance="@style/error_appearance"
+                    app:expandedHintEnabled="false"
+                    app:hintTextColor="@color/blue">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edt_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ 1234567890_"
+                        android:hint="Name"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/text_normal_small" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/OutlinedRoundedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:textColorHint="@color/grey"
+                    app:boxCornerRadiusBottomEnd="20dp"
+                    app:boxCornerRadiusBottomStart="20dp"
+                    app:boxCornerRadiusTopEnd="20dp"
+                    app:boxCornerRadiusTopStart="20dp"
+                    app:boxStrokeColor="@color/blue"
+                    app:errorTextAppearance="@style/error_appearance"
                     app:expandedHintEnabled="false"
                     app:hintTextColor="@color/blue"
                     app:passwordToggleEnabled="true"
@@ -60,34 +89,10 @@
                         android:hint="Password"
                         android:inputType="textPassword"
                         android:textColor="@color/black"
-                        android:textSize="20sp" />
+                        android:textSize="@dimen/text_normal_small" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputLayout
-                    style="@style/OutlinedRoundedBox"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:textColorHint="@color/grey"
-                    app:boxCornerRadiusBottomEnd="10dp"
-                    app:boxCornerRadiusBottomStart="10dp"
-                    app:boxCornerRadiusTopEnd="10dp"
-                    app:boxCornerRadiusTopStart="10dp"
-                    app:boxStrokeColor="@color/blue"
-                    app:expandedHintEnabled="false"
-                    app:hintTextColor="@color/blue">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/edt_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Name"
-                        android:textColor="@color/black"
-                        android:textSize="20sp" />
-
-                </com.google.android.material.textfield.TextInputLayout>
                 <!--  <EditText
                       android:id="@+id/password_text"
                       android:layout_width="match_parent"
@@ -113,12 +118,12 @@
                     android:id="@+id/extract_ca_btn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
                     android:layout_marginTop="10dp"
+                    android:padding="20dp"
                     android:text="IMPORT"
                     android:textColor="@color/white"
-                    android:textSize="22sp"
-                    app:cornerRadius="15dp" />
+                    android:textSize="@dimen/text_small"
+                    app:cornerRadius="30sp" />
 
 
             </LinearLayout>
