--- a/app/src/main/res/layout/list_item_directory.xml
+++ b/app/src/main/res/layout/list_item_directory.xml
@@ -42,7 +42,7 @@
             android:text="@{directory.name}"
             android:textAppearance="?attr/textAppearanceListItem"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="@dimen/text_small"
             tools:text="Cert" />
 
         <LinearLayout
@@ -57,7 +57,7 @@
                 android:ems="3"
                 android:text="Path:"
                 android:textColor="@color/grey"
-                android:textSize="16sp"
+                android:textSize="@dimen/text_micro"
                 android:textStyle="bold" />
 
             <TextView
@@ -67,7 +67,7 @@
                 android:layout_height="wrap_content"
                 android:text="@{directory.path}"
                 android:textColor="@color/grey"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_micro" />
         </LinearLayout>
 
         <View
