--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="blue">#1a46ea</color>
     <color name="grey">#979797</color>
     <color name="transparent">#00000000</color>
+    <color name="bg_menu">#F4F4F4</color>
 </resources>
