--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,13 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="text_micro_double">16sp</dimen>
+    <dimen name="text_micro">18sp</dimen>
+    <dimen name="text_small">20sp</dimen>
+    <dimen name="text_normal_small">22sp</dimen>
+    <dimen name="text_normal">24sp</dimen>
+    <dimen name="text_large">26sp</dimen>
+    <dimen name="text_xlarge">28sp</dimen>
+    <dimen name="text_xlarge_double">30sp</dimen>
 </resources>
