--- a/app/src/main/res/navigation/navigation_app_graph.xml
+++ b/app/src/main/res/navigation/navigation_app_graph.xml
@@ -2,26 +2,16 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:startDestination="@id/nav_import"
-    android:id="@+id/navigation_app_graph">
+    android:id="@+id/navigation_app_graph"
+    app:startDestination="@id/nav_import">
 
     <fragment
         android:id="@+id/nav_sign"
-        tools:layout="@layout/home_fragment"
         android:name="th.or.etda.teda.mobile.ui.sign.SignFragment"
-        android:label="Sign Signature">
+        android:label="Sign Signature"
+        tools:layout="@layout/sign_fragment">
 
 
-
-
-
-        <action
-            android:id="@+id/next_action"
-            app:destination="@id/has_detail_fragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
 
         <action
             android:id="@+id/next_cert_list"
@@ -29,16 +19,8 @@
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:popExitAnim="@anim/slide_out_right" />
 
-
-        <action
-            android:id="@+id/next_drive"
-            app:destination="@id/drive_fragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
 
         <action
             android:id="@+id/next_directory"
@@ -46,15 +28,9 @@
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:popExitAnim="@anim/slide_out_right" />
 
-        <action
-            android:id="@+id/next_sign_detail"
-            app:destination="@id/sign_detail_fragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+
 
         <action
             android:id="@+id/next_action_to_first"
@@ -64,63 +40,28 @@
             app:popUpToInclusive="true" />
     </fragment>
 
-    <fragment
-        android:id="@+id/sign_detail_fragment"
-        tools:layout="@layout/sign_detail_fragment"
-        android:name="th.or.etda.teda.mobile.ui.sign.detail.SignDetailFragment">
-
-        <argument
-            android:name="signInfo"
-            app:argType="th.or.etda.teda.mobile.model.SignedInfo" />
 
 
-        <action
-            android:id="@+id/next_action_to_first"
-            app:destination="@id/nav_sign"
-            app:launchSingleTop="true"
-            app:popUpTo="@+id/nav_sign"
-            app:popUpToInclusive="true" />
-
-    </fragment>
-
-    <fragment
-        android:id="@+id/has_detail_fragment"
-        tools:layout="@layout/hashdetail_fragment"
-        android:name="th.or.etda.teda.mobile.ui.hashdetail.HashDetailFragment">
-
-        <argument
-            android:name="qr_result"
-            app:argType="th.or.etda.teda.mobile.model.SignedInfo" />
-
-
-    </fragment>
 
 
     <fragment
         android:id="@+id/cert_list_fragment"
-        tools:layout="@layout/cert_list_fragment"
-        android:name="th.or.etda.teda.mobile.ui.cert.CertListFragment">
+        android:name="th.or.etda.teda.mobile.ui.cert.CertListFragment"
+        tools:layout="@layout/cert_list_fragment">
 
         <argument
             android:name="isResult"
-            app:argType="boolean"
-            android:defaultValue="false"/>
+            android:defaultValue="false"
+            app:argType="boolean" />
 
 
     </fragment>
 
-
-    <fragment
-        android:id="@+id/drive_fragment"
-        tools:layout="@layout/drive_fragment"
-        android:name="th.or.etda.teda.mobile.ui.backupkey.googledrive.DriveFragment">
-
-    </fragment>
 
     <fragment
         android:id="@+id/directory_fragment"
-        tools:layout="@layout/directory_fragment"
-        android:name="th.or.etda.teda.mobile.ui.importkey.directory.DirectoryFragment">
+        android:name="th.or.etda.teda.mobile.ui.importkey.directory.DirectoryFragment"
+        tools:layout="@layout/directory_fragment">
 
         <action
             android:id="@+id/next_action_import_password"
@@ -128,7 +69,7 @@
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:popExitAnim="@anim/slide_out_right" />
 
 
     </fragment>
@@ -138,7 +79,7 @@
         android:id="@+id/nav_import"
         android:name="th.or.etda.teda.mobile.ui.importkey.ImportKeyFragment"
         android:label="@string/menu_import"
-        tools:layout="@layout/import_key_fragment" >
+        tools:layout="@layout/import_key_fragment">
 
 
         <action
@@ -147,7 +88,7 @@
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:popExitAnim="@anim/slide_out_right" />
 
         <action
             android:id="@+id/next_action_restore"
@@ -155,7 +96,7 @@
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:popExitAnim="@anim/slide_out_right" />
 
         <action
             android:id="@+id/next_action_sign"
@@ -163,7 +104,7 @@
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:popExitAnim="@anim/slide_out_right" />
 
         <action
             android:id="@+id/next_action_import_password"
@@ -171,23 +112,23 @@
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:popExitAnim="@anim/slide_out_right" />
 
     </fragment>
 
     <fragment
         android:id="@+id/import_key_password"
         android:name="th.or.etda.teda.mobile.ui.importkey.password.ImportKeyPasswordFragment"
-        tools:layout="@layout/import_key_password_fragment" >
+        tools:layout="@layout/import_key_password_fragment">
 
         <argument
             android:name="file"
-            app:argType="string"/>
+            app:argType="string" />
 
         <argument
             android:name="isResult"
-            app:argType="boolean"
-            android:defaultValue="false"/>
+            android:defaultValue="false"
+            app:argType="boolean" />
 
         <action
             android:id="@+id/action_to_first"
@@ -203,7 +144,7 @@
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:popExitAnim="@anim/slide_out_right" />
 
     </fragment>
 
@@ -212,7 +153,7 @@
         android:id="@+id/nav_restore"
         android:name="th.or.etda.teda.mobile.ui.restorekey.RestoreKeyFragment"
         android:label="@string/menu_restore"
-        tools:layout="@layout/restore_key_fragment" >
+        tools:layout="@layout/restore_key_fragment">
 
         <action
             android:id="@+id/next_action_import_password"
@@ -220,7 +161,7 @@
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:popExitAnim="@anim/slide_out_right" />
 
         <action
             android:id="@+id/next_action_backup_password"
@@ -228,7 +169,7 @@
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:popExitAnim="@anim/slide_out_right" />
 
         <action
             android:id="@+id/next_action_restore_password"
@@ -236,37 +177,20 @@
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:popExitAnim="@anim/slide_out_right" />
 
     </fragment>
 
-    <fragment
-        android:id="@+id/nav_backup"
-        android:name="th.or.etda.teda.mobile.ui.backupkey.BackupKeyFragment"
-        android:label="@string/menu_backup"
-        tools:layout="@layout/backup_key_fragment" >
-
-
-
-        <!--<action
-            android:id="@+id/next_action_backup_password"
-            app:destination="@id/backup_key_password"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>-->
-
-    </fragment>
 
     <fragment
         android:id="@+id/backup_key_password"
         android:name="th.or.etda.teda.mobile.ui.backupkey.password.BackupKeyPasswordFragment"
-        tools:layout="@layout/backup_key_password_fragment" >
+        tools:layout="@layout/backup_key_password_fragment">
 
         <argument
             android:name="isRestore"
-            app:argType="boolean"
-            android:defaultValue="false"/>
+            android:defaultValue="false"
+            app:argType="boolean" />
 
 
     </fragment>
@@ -275,7 +199,7 @@
     <fragment
         android:id="@+id/restore_key_password"
         android:name="th.or.etda.teda.mobile.ui.restorekey.password.RestoreKeyPasswordFragment"
-        tools:layout="@layout/restore_key_password_fragment" >
+        tools:layout="@layout/restore_key_password_fragment">
 
 
         <action
@@ -284,7 +208,7 @@
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:popExitAnim="@anim/slide_out_right" />
 
     </fragment>
 
@@ -292,7 +216,7 @@
     <fragment
         android:id="@+id/restore_import_key_password"
         android:name="th.or.etda.teda.mobile.ui.restorekey.import.RestoreImportKeyPasswordFragment"
-        tools:layout="@layout/restore_import_key_password_fragment" >
+        tools:layout="@layout/restore_import_key_password_fragment">
 
         <action
             android:id="@+id/next_action_to_first"
