--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -3,5 +3,6 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">mobilekey-uat-signing.teda.th</domain>
         <domain includeSubdomains="true">mconnecttest-signing.teda.th</domain>
+        <domain includeSubdomains="true">api-uat.teda.th</domain>
     </domain-config>
 </network-security-config>
