Remove “ปิดแจ้งเตือน” btn ออกจาก info ตอน Signed success Disable horizontal view ปรับเช็ค permission กล้องก่อนเข้าหน้า signing

--- a/app/src/main/res/layout/dialog_sign_info_success.xml
+++ b/app/src/main/res/layout/dialog_sign_info_success.xml
@@ -94,6 +94,7 @@
                     android:layout_height="wrap_content"
                     android:padding="20dp"
                     android:text="ปิดแจ้งเตือน"
+                    android:visibility="gone"
                     android:textColor="@color/blue"
                     android:textSize="@dimen/text_small"
                     app:backgroundTint="@color/white"
