--- a/app/src/main/res/layout/restore_import_key_password_fragment.xml
+++ b/app/src/main/res/layout/restore_import_key_password_fragment.xml
@@ -45,7 +45,7 @@
                         android:id="@+id/edt_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ 1234567890_"
+                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ 1234567890_กขฃคฅฆงจฉชซฌญฎฏฐฑฒณดตถทธนบปผฝพฟภมยรลวศษสหฬอฮไำะัี๊ฯเ้็่๋าแิื์ใุูึ"
                         android:hint="Name"
                         android:textColor="@color/black"
                         android:textSize="@dimen/text_normal_small" />
