--- a/app/src/main/res/navigation/navigation_app_graph.xml
+++ b/app/src/main/res/navigation/navigation_app_graph.xml
@@ -130,6 +130,11 @@
             android:defaultValue="false"
             app:argType="boolean" />
 
+        <argument
+            android:name="isBackGoogle"
+            android:defaultValue="false"
+            app:argType="boolean" />
+
         <action
             android:id="@+id/action_to_first"
             app:destination="@id/nav_import"
